--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarrays as xr\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,12 +55,12 @@
    "outputs": [],
    "source": [
     "# ERA5\n",
-    "print(f'ERA5\\nLon: from {lon_ERA5.values.min()}, to {lon_ERA5.values.max()},\n",
-    "            \\nLat: from{lat_ERA5.values.min()}, to {lat_ERA5.values.max()}')\n",
+    "print(f'ERA5\\nLon: from {LON_ERA5.values.min()}, to {LON_ERA5.values.max()}, \\\n",
+    "            \\nLat: from{LAT_ERA5.values.min()}, to {LAT_ERA5.values.max()}')\n",
     "\n",
     "# GRIPHO\n",
-    "print(f'ERA5\\nLon: from {lon_GRIPHO.values.min()}, to {lon_GRIPHO.values.max()},\n",
-    "            \\nLat: from{lat_GRIPHO.values.min()}, to {lat_GRIPHO.values.max()}')"
+    "print(f'ERA5\\nLon: from {LON_GRIPHO.values.min()}, to {LON_GRIPHO.values.max()}, \\\n",
+    "            \\nLat: from{LAT_GRIPHO.values.min()}, to {LAT_GRIPHO.values.max()}')"
    ]
   },
   {
@@ -158,10 +169,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.2 ('torchgnn')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.2"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a7d02a8bfcdbf852dc0410f71c0782505fd3603bc8c85eec66ce59bd41816d69"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
